fix carousel bullet z-index, only run save_post hook for map on regular posts

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -721,6 +721,7 @@ header.navbar {
     }
   }
   .carousel-indicators {
+    z-index: 30;
     text-align: center;
     left: 50%;
     margin-left: -30%;
